Try to fix input being too small

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,7 +46,7 @@ a {
 	}
 
 	#uploadImageInput {
-		display: block;
+		display: none;
 	}
 
 	#uploadedImagesCont {
